refine: incorporate research findings into concurrency standard
Add version-specific synchronized/pinning guidance (JEP 491 for Java 24+),
Semaphore pattern for resource limiting with virtual threads, ThreadLocal
caching pitfall, Condition objects in lock selection, and StampedLock
reentrancy caveat.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>